valid_tests/functions/test2.go
// Test 2: Function with multiple parameters and no return
func printSum(a int, b int, c int) {
    result := a + b + c
}

func main() {
    printSum(1, 2, 3)
}
