invalid_tests/functions/test4.go
// Test 4: Function call with missing closing parenthesis
func add(a int, b int) int {
    return a + b
}

func main() {
    result := add(1, 2
}
